mpi4py kernels aplication

--- a/Ejercicio_imagenC.ipynb
+++ b/Ejercicio_imagenC.ipynb
@@ -1,44 +1,26 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## Ejemplo de carga de una imagen en C"
-      ],
       "metadata": {
         "id": "hU2f1tt3A5GR"
-      }
+      },
+      "source": [
+        "## Ejemplo de carga de una imagen en C"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Instalemos algunas librerías útiles."
-      ],
       "metadata": {
         "id": "cTGj4J9vxL31"
-      }
+      },
+      "source": [
+        "### Instalemos algunas librerías útiles."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!sudo apt-get update\n",
-        "!sudo apt-get install libpng-dev\n",
-        "!sudo apt-get install libjpeg-dev"
-      ],
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -46,11 +28,10 @@
         "id": "crH6dchQBih3",
         "outputId": "fb6d5a73-d49e-4864-d9d1-9deba19245d4"
       },
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rHit:1 http://archive.ubuntu.com/ubuntu jammy InRelease\n",
             "\r0% [Waiting for headers] [Connecting to security.ubuntu.com] [Waiting for heade\r                                                                               \rGet:2 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease [3,626 B]\n",
@@ -86,18 +67,23 @@
             "0 upgraded, 0 newly installed, 0 to remove and 19 not upgraded.\n"
           ]
         }
+      ],
+      "source": [
+        "!sudo apt-get update\n",
+        "!sudo apt-get install libpng-dev\n",
+        "!sudo apt-get install libjpeg-dev"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fEU3D_9JxS3y"
+      },
       "source": [
         "### Ejemplo de como se deben escribir los programas en c para cargar imégenes\n",
         "\n",
         "Este código permite cargar cualquier tipo de imagen .PNG. Se le carga de manera dinámica la imagen en el momento de la ejecución por linea de comando."
-      ],
-      "metadata": {
-        "id": "fEU3D_9JxS3y"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -111,8 +97,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Overwriting cargar_imagen.c\n"
           ]
@@ -166,29 +152,27 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Compilamos el archivo en C con las respectivas librerías."
-      ],
       "metadata": {
         "id": "RdikQMakx9L0"
-      }
+      },
+      "source": [
+        "#### Compilamos el archivo en C con las respectivas librerías."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gcc cargar_imagen.c -o imagen -lpng"
-      ],
+      "execution_count": 4,
       "metadata": {
         "id": "asMPUS7fBV-W"
       },
-      "execution_count": 4,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!gcc cargar_imagen.c -o imagen -lpng"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls"
-      ],
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -196,33 +180,32 @@
         "id": "9KugUScqC75b",
         "outputId": "4d3aa721-66a4-4d12-a2b0-10bbef470122"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "cargar_imagen.c  gato.png  imagen  imagen.jpg  sample_data\n"
           ]
         }
+      ],
+      "source": [
+        "!ls"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "JUaXIxIpyDSn"
+      },
       "source": [
         "#### Ejecutamos el archivo que se genera del programa\n",
         "y le pasamos como argumento la ruta de la imágen"
-      ],
-      "metadata": {
-        "id": "JUaXIxIpyDSn"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget -O imagen.png https://w7.pngwing.com/pngs/36/440/png-transparent-homer-simpson-computer-icons-technology-homero-miscellaneous-text-hand.png\n",
-        "!wget -O imagen.jpeg https://w7.pngwing.com/pngs/36/440/png-transparent-homer-simpson-computer-icons-technology-homero-miscellaneous-text-hand.png"
-      ],
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -230,11 +213,10 @@
         "id": "c7TkzSXWyOiu",
         "outputId": "02a54c44-498a-42b9-e88e-19558e79ae42"
       },
-      "execution_count": 15,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-11-30 10:38:28--  https://w7.pngwing.com/pngs/36/440/png-transparent-homer-simpson-computer-icons-technology-homero-miscellaneous-text-hand.png\n",
             "Resolving w7.pngwing.com (w7.pngwing.com)... 172.67.165.106, 104.21.73.185, 2606:4700:3037::6815:49b9, ...\n",
@@ -260,46 +242,67 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!wget -O imagen.png https://w7.pngwing.com/pngs/36/440/png-transparent-homer-simpson-computer-icons-technology-homero-miscellaneous-text-hand.png\n",
+        "!wget -O imagen.jpeg https://w7.pngwing.com/pngs/36/440/png-transparent-homer-simpson-computer-icons-technology-homero-miscellaneous-text-hand.png"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!./imagen \"/content/imagen.png\""
-      ],
+      "execution_count": 14,
       "metadata": {
-        "id": "Wfsti14ABzWs",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "Wfsti14ABzWs",
         "outputId": "47a76e82-bbf9-402b-afa4-a98f0dd7cfe0"
       },
-      "execution_count": 14,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tamaño de la imagen: 920 x 719\n"
           ]
         }
+      ],
+      "source": [
+        "!./imagen \"/content/imagen.png\""
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "EugtjOk7zGBd"
+      },
       "source": [
         "### Estrategia paralela de filtrado.\n",
         "\n",
         "Para este vamos a aplicarle el filtro de sobel (vertical y horizontal) a la imágen y usando una estrategia paralela.\n",
         "\n",
         "Primero veamos como es el código de manera secuencial para este caso"
-      ],
-      "metadata": {
-        "id": "EugtjOk7zGBd"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 16,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4DBj0pMVCzEK",
+        "outputId": "96397922-3c03-4235-a0f5-1ba9fdd5ffa7"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Writing filtro_image.c\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile filtro_image.c\n",
         "#include <stdio.h>\n",
@@ -364,40 +367,20 @@
         "\n",
         "    return 0;\n",
         "}\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "4DBj0pMVCzEK",
-        "outputId": "96397922-3c03-4235-a0f5-1ba9fdd5ffa7"
-      },
-      "execution_count": 16,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Writing filtro_image.c\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Descargamos los archivos de las librerías externas"
-      ],
       "metadata": {
         "id": "vyYiYDxDz1BL"
-      }
+      },
+      "source": [
+        "#### Descargamos los archivos de las librerías externas"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!wget https://raw.githubusercontent.com/nothings/stb/master/stb_image.h\n",
-        "!wget https://raw.githubusercontent.com/nothings/stb/master/stb_image_write.h\n"
-      ],
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -405,11 +388,10 @@
         "id": "QOG5fblNEvNE",
         "outputId": "e335fa0f-6bd2-42b6-eb3b-5ea49f476efc"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2023-11-30 10:38:46--  https://raw.githubusercontent.com/nothings/stb/master/stb_image.h\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.108.133, 185.199.110.133, ...\n",
@@ -435,22 +417,24 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "!wget https://raw.githubusercontent.com/nothings/stb/master/stb_image.h\n",
+        "!wget https://raw.githubusercontent.com/nothings/stb/master/stb_image_write.h\n"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Verificamos que se descarguen los archivos."
-      ],
       "metadata": {
         "id": "PmKafuV9z7Se"
-      }
+      },
+      "source": [
+        "#### Verificamos que se descarguen los archivos."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!ls -l"
-      ],
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -458,11 +442,10 @@
         "id": "l0_LKsFQFSlq",
         "outputId": "f05042a1-c681-4bc3-ca74-118e2acfb428"
       },
-      "execution_count": 18,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "total 456\n",
             "-rw-r--r-- 1 root root   1034 Nov 30 10:30 cargar_imagen.c\n",
@@ -475,35 +458,36 @@
             "-rw-r--r-- 1 root root  71221 Nov 30 10:38 stb_image_write.h\n"
           ]
         }
+      ],
+      "source": [
+        "!ls -l"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "sDFWyVaPz_8q"
+      },
       "source": [
         "#### Se compila el programa con los respectivas banderas para tomar las librerias\n",
         "\n",
         "-lm es para que compile la libreria de funciones matemática como sqrt()"
-      ],
-      "metadata": {
-        "id": "sDFWyVaPz_8q"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gcc filtro_image.c -o filtro_image -lm\n"
-      ],
+      "execution_count": 19,
       "metadata": {
         "id": "xVH-FOSgFUF0"
       },
-      "execution_count": 19,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!gcc filtro_image.c -o filtro_image -lm\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!./filtro_image"
-      ],
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -511,53 +495,51 @@
         "id": "fESf6zmQFlCR",
         "outputId": "5c98082f-9e7b-41fd-a8cf-6f9014ebaf4e"
       },
-      "execution_count": 20,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tiempo de ejecución: 0.039270 segundos\n"
           ]
         }
+      ],
+      "source": [
+        "!./filtro_image"
       ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "### Ahora con OpenMP"
-      ],
       "metadata": {
         "id": "YhEXbfp5abZ3"
-      }
+      },
+      "source": [
+        "### Ahora con OpenMP"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "#### Descargamos las librerías útiles."
-      ],
       "metadata": {
         "id": "rYkYjPns0c_B"
-      }
+      },
+      "source": [
+        "#### Descargamos las librerías útiles."
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!sudo apt-get update\n",
-        "!sudo apt-get install build-essential"
-      ],
+      "execution_count": null,
       "metadata": {
-        "id": "B8dXDJKoFoiA",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "B8dXDJKoFoiA",
         "outputId": "dbffba91-765f-4c74-e18d-5e9faafc9b8d"
       },
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\r0% [Working]\r            \rHit:1 https://cloud.r-project.org/bin/linux/ubuntu jammy-cran40/ InRelease\n",
             "\r0% [Connecting to archive.ubuntu.com (91.189.91.81)] [Waiting for headers] [Con\r                                                                               \rHit:2 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2204/x86_64  InRelease\n",
@@ -580,10 +562,17 @@
             "0 upgraded, 0 newly installed, 0 to remove and 17 not upgraded.\n"
           ]
         }
+      ],
+      "source": [
+        "!sudo apt-get update\n",
+        "!sudo apt-get install build-essential"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "twnJFcwn0iOe"
+      },
       "source": [
         "#### Escribimos el programa usando openMP.\n",
         "\n",
@@ -600,13 +589,27 @@
         "\n",
         "Verifique que el bucle externo itera a través de las filas (y) de la imagen y el bucle interno a través de las columnas (x). Al usar collapse(2), se trata la combinación de estas dos dimensiones como un único conjunto de iteraciones, lo que permite una distribución más eficiente de las iteraciones entre los hilos de OpenMP.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "twnJFcwn0iOe"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 26,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "syH8S24Wea-m",
+        "outputId": "b6e291f1-2d07-4c71-c13d-d05e75bdbc57"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Overwriting tu_programa.c\n"
+          ]
+        }
+      ],
       "source": [
         "%%writefile tu_programa.c\n",
         "#include <stdio.h>\n",
@@ -673,41 +676,22 @@
         "\n",
         "    return 0;\n",
         "}"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "syH8S24Wea-m",
-        "outputId": "b6e291f1-2d07-4c71-c13d-d05e75bdbc57"
-      },
-      "execution_count": 26,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Overwriting tu_programa.c\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!gcc tu_programa.c -o tu_programa -fopenmp -lm"
-      ],
+      "execution_count": 27,
       "metadata": {
         "id": "mwNCNy9wahMi"
       },
-      "execution_count": 27,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!gcc tu_programa.c -o tu_programa -fopenmp -lm"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!./tu_programa"
-      ],
+      "execution_count": 28,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -715,25 +699,42 @@
         "id": "f8HCDTeoejYx",
         "outputId": "bc6b71be-df3c-485a-8f97-cf0893fd094c"
       },
-      "execution_count": 28,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Tiempo de ejecución: 0.060102 segundos\n"
           ]
         }
+      ],
+      "source": [
+        "!./tu_programa"
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "H3n6RKvwfLjE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
